# pdf-mcp-server

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GLOBAL_CURSOR_INSTRUCTIONS.md  LICENSE  MEMORY_AND_RULES.md  Makefile  NOTICE  README.md  SECURITY.md  USAGE.md  llms.txt  pyproject.toml
.cursor/: hooks.json
.cursor/agents/: debugger.md  test-runner.md  verifier.md
.cursor/hooks/: block-destructive.sh
.cursor/rules/: memory-system.rules  no-shell-leak.mdc  template.rules
.cursor/skills/cross-platform-setup/: SKILL.md
.cursor/skills/llm-e2e-qa/: SKILL.md
.cursor/skills/memo-kb-sync/: SKILL.md
.cursor/skills/pdf-form-filling/: SKILL.md
.cursor/skills/release-sop/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  meeting-distillation.yml
.github/workflows/: ai-review.yml  bootstrap-labels.yml  ci.yml  codeql.yml  dependency-review.yml  feature-approved-create-project.yml  lint.yml  pr-hygiene.yml  pre-commit.yml  release.yml  secret-scan.yml
.sentrux/: baseline.json
PROJECT_MEMO/: FORM_FILLING_PROMPT.md  GLOBAL_CURSOR_INSTRUCTIONS.md  HANDOVER.md  HANDOVER_PROMPT.md  MEMORY_AND_RULES.md  MIGRATION_RUNBOOK.md  PROJECT_STATUS_PROMPT.md  README.md  RELEASE_RUNBOOK.md  TROUBLESHOOTING.md  cursor-ai-memory-system-complete-setup.md
PROJECT_MEMO/OPERATIONS/: github-milestone-v0.7.0-template.md
PROJECT_MEMO/PEPPER_SYNC/memories-and-kb/: coding-standards-v9-1.md  cursor-memory-complete-setup.md  error-patterns.md  integration-guide.md  quick-reference-card.md  sync-policy.md
PROJECT_MEMO/ROADMAPS/: v0.7.0-v1.0.0-roadmap.md
PROJECT_MEMO/STRATEGY/: next-release-plan-v0.9.5.md  next-steps-sprint-plan.md
docs/: CURSOR_SMOKE_TEST.md  SMOKE_TEST.md  roadmap-v1.3.0-v1.4.0-cli-readiness.md  roadmap-v1.3.0-v1.7.0-cli-and-platform.md
memories-and-kb/: memory-items-ready-to-use.md  summary-research-backed-standards.md
pdf_mcp/: __init__.py  cli.py  llm_setup.py  logging.py  pdf_tools.py  registry.py  server.py
scripts/: auto_create_project_on_feature_approved.py  check_llm_status.py  check_pr_hygiene.py  check_release_ready.py  create_github_release_from_changelog.py  cursor_smoke.py  ensure_labels.py  ensure_ollama_model.py  generate_usage_doc.py  run_local_vlm.sh  setup_environment.sh
tests/: golden_helpers.py  test_agentic_features.py  test_check_release_ready.py  test_cli.py  test_cli_golden.py  test_cli_verb_groups.py  test_doc_layout.py  test_llm_setup.py  test_logging.py  test_ocr.py  test_pdf_tools.py  test_phase2_features.py  test_phase3_features.py  test_registry.py  test_repo_hygiene.py  test_server_registry_parity.py  test_usage_doc_generator.py
tests/golden/: help.txt  serve_help.txt
