[project]
name = "pdf-mcp"
version = "1.2.18"
description = "Local CLI and MCP server for PDF form filling, editing, OCR, and AI-assisted extraction"
authors = [{ name = "Local User" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.1",
    "pypdf>=5.1.0",
    "fillpdf>=0.7.3",
    "pymupdf>=1.26.7",
    "pyhanko>=0.32.0",
    "cryptography>=42.0.0",
    # Typer powers the v1.3.0+ first-class CLI (pdf-mcp serve, etc.).
    # Pinned with a permissive lower bound to align with installed wheels
    # while keeping the door open for future security/feature uplifts.
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff"]
ocr = ["pytesseract>=0.3.10", "pillow>=10.0.0"]
llm = ["openai>=1.0.0"]

[project.scripts]
# v1.3.0+: ship pdf-mcp as a first-class console script. The legacy
# ``python -m pdf_mcp.server`` entry point still works; ``pdf-mcp serve``
# is its drop-in replacement (see pdf_mcp/cli.py).
pdf-mcp = "pdf_mcp.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Avoid setuptools flat-layout auto-discovery picking up repo-doc folders (e.g. PROJECT_MEMO).
where = ["."]
include = ["pdf_mcp*"]
exclude = ["PROJECT_MEMO*", "memories-and-kb*", "docs*", "scripts*", "tests*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
#
# We enforce linting incrementally:
# - CI + pre-push run ruff on *changed files* to prevent regressions.
# - Keep rule set small to avoid forcing repo-wide cleanup in one PR.
select = ["F", "E9", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (e2e tests requiring running LLM servers)",
]

