[project]
name = "pdf-mcp"
version = "1.3.0"
description = "Local CLI and MCP server for PDF form filling, editing, OCR, and AI-assisted extraction"
authors = [{ name = "pdf-mcp maintainers" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.1",
    "pypdf>=6.10.2",
    "fillpdf>=0.7.3",
    "pymupdf>=1.26.7",
    "pyhanko>=0.32.0",
    "cryptography>=46.0.7",
    # Typer powers the v1.3.0+ first-class CLI (pdf-mcp serve, etc.).
    # Pinned with a permissive lower bound to align with installed wheels
    # while keeping the door open for future security/feature uplifts.
    "typer>=0.12.0",
]

[project.optional-dependencies]
# pytest-cov powers the v1.3.0 CI coverage gate
# (see [tool.pytest.ini_options] / [tool.coverage.*]).
dev = ["pytest", "pytest-cov>=5.0.0", "pre-commit", "ruff"]
ocr = ["pytesseract>=0.3.10", "pillow>=12.2.0"]
llm = ["openai>=1.0.0"]

[project.scripts]
# v1.3.0+: ship pdf-mcp as a first-class console script. The legacy
# ``python -m pdf_mcp.server`` entry point still works; ``pdf-mcp serve``
# is its drop-in replacement (see pdf_mcp/cli.py).
pdf-mcp = "pdf_mcp.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Avoid setuptools flat-layout auto-discovery picking up repo-doc folders.
where = ["."]
include = ["pdf_mcp*"]
exclude = ["docs*", "scripts*", "tests*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
#
# We enforce linting incrementally:
# - CI + pre-push run ruff on *changed files* to prevent regressions.
# - Keep rule set small to avoid forcing repo-wide cleanup in one PR.
select = ["F", "E9", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (e2e tests requiring running LLM servers)",
]
# v1.3.0 coverage gate (TICKET-08 c2). Baseline at branch-cut was 84%
# total (pdf_mcp/__init__.py 60%, cli 92%, llm_setup 81%, logging 77%,
# pdf_tools 83%, registry 97%, server 94%). The gate floor is set to 75%
# -- a deliberate gap below baseline to allow occasional dips for
# defensive code paths (fast-failing helpers, OS-specific branches)
# without breaking CI; future tickets ratchet upward in 5pp increments.
addopts = [
    "--cov=pdf_mcp",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=75",
]

[tool.coverage.run]
source = ["pdf_mcp"]
branch = true
omit = [
    # The MCP server entry point ``mcp.run(transport="stdio")`` blocks on
    # stdin and is never reached in unit/integration tests; the rest of
    # ``server.py`` (``_register_all_tools`` and helpers) is fully covered
    # by the import-side-effect at module load + the parity tests.
    "pdf_mcp/server.py:__main__",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
skip_covered = false
show_missing = true
